--- a/pages/css-modules/index.module.css
+++ b/pages/css-modules/index.module.css
@@ -18,6 +18,7 @@
     .recentCarousel {
         margin: 0;
         text-align: center;
+        padding-bottom: 5%;
     }
 
     .carousels {
